# desquirr

./: .gitignore  CMakeLists.txt  CollateExprNodeVisitor.cpp  CollateExprNodeVisitor.hpp  CollateNodeVisitor.cpp  CollateNodeVisitor.hpp  analysis.hpp  build.sh  codegen.cpp  codegen.hpp  collateexpr.cpp  collateexpr.hpp  collatenode.cpp  collatenode.hpp  controlflow.cpp  controlflow.hpp  dataflow.cpp  dataflow.hpp  desquirr.cpp  desquirr.hpp  expression.cpp  expression.hpp  frontend.cpp  frontend.hpp  function.hpp  ida-arm.cpp  ida-arm.hpp  ida-arm2.hpp  ida-x86.cpp  ida-x86.hpp  idainternal.hpp  idapro.cpp  idapro.hpp  instruction.cpp  instruction.hpp  makefile  node.cpp  node.hpp  usedefine.cpp  usedefine.hpp  (+1 more)
instructions/: break.hpp  case.hpp  continue.hpp  instruction.cpp  instruction.hpp  label.hpp  throw.hpp
instructions/binary/: assignment.hpp  binary.hpp  conditionaljump.hpp
instructions/unary/: dowhile.hpp  if.hpp  jump.hpp  pop.hpp  push.hpp  return.hpp  switch.hpp  unaryinstruction.hpp  while.hpp
nodes/: NodeListVisitor.cpp  NodeListVisitor.h  NodeVisitor.hpp
